# quick-find

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
doc/: config.schema.json  gen-md.bat
src/: main.ts  styles.css
src-tauri/: Cargo.toml  config.schema.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  entry.rs  main.rs  menu.rs
